[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Parent and Script/Button.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sounds/metalClick.ogg" type="AudioStream" id=2]

[sub_resource type="Animation" id=1]
resource_name = "click"
length = 0.1
tracks/0/type = "method"
tracks/0/path = NodePath("AudioStreamPlayer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[node name="Button" type="Area2D" groups=[
"changeable",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]

[node name="T_CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/click = SubResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0
[connection signal="body_entered" from="." to="." method="_on_Button_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Button_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
